Fix the double scroll bar and add loading indication

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -4,6 +4,7 @@ body {
 }
 
 body {
+  display: flex;
   //padding-top: 60px;
 }
 
@@ -26,7 +27,9 @@ body {
 }
 
 .layout {
-  height: 100%;
+  // height: 100%;
+  display: flex;
+  min-width: 100%;
 }
 
 .page-title {
